clang/test/BSC/Negative/Trait/r3/multi_level_pointer_var/multi_level_pointer_var.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F {
  int foo(This *this);
};
_Trait G {};

struct S {};

int struct S::foo(This *this) {
  return 1;
}

_Impl _Trait F for struct S;

_Trait F *f(_Trait F *a) {
    return a;
}

int main() {
  struct S s;
  int num = 1;
  _Trait F *p = &s;

  _Trait F **q = &p;
  _Trait F **q1 = &p;
  // compare with null
  if (q == (void*)0) {}
  if ((void*)0 == q) {}
  // compare with _Trait **
  if (q != q1) {}
  if (q != &p) {}
  // compare with _Trait *
  if (q != p) {} // expected-error {{comparison of distinct pointer types ('_Trait F **' and '_Trait F *')}}
                 // expected-warning@-1 {{comparison of distinct pointer types ('_Trait F **' and '_Trait F *')}}
  // compare with int
  if (q != num) {} // expected-warning {{comparison between pointer and integer ('struct __Trait_F *' and 'int')}}
  // compare with struct S
  if (q != s) {} // expected-error {{invalid operands to binary expression ('struct __Trait_F *' and 'struct S')}}
  // compare with int *
  if (q != &num) {} // expected-warning {{comparison of distinct pointer types ('_Trait F **' and 'int *')}}
  // compare with struct S *
  if (q != &s) {} // expected-warning {{comparison of distinct pointer types ('_Trait F **' and 'struct S *')}}

  // desugar
  // compare with _Trait pointer
  _Trait G * g;
  if ((*q) != g) {} // expected-warning {{comparison of distinct pointer types ('_Trait F *' and '_Trait G *')}}
  if ((*q) == (p) && (*q) != (p)) {}
  // compare with non-_Trait pointer
  int *a;
  if ((*q) == &s) {}
  if ((*q) == a) {} // expected-warning {{expected a pointer type which has implemented '_Trait F', found 'int *'}}
  if ((*q) == s) {} // expected-error {{expected a pointer type which has implemented '_Trait F', found 'struct S'}}

  _Trait F ***t = &q;
  // compare with _Trait pointer
  if ((**t) != g) {} // expected-warning {{comparison of distinct pointer types ('_Trait F *' and '_Trait G *')}}
  if ((**t) == (p) && (**t) != (p)) {}
  // compare with non-_Trait pointer
  if ((**t) == &s) {}
  if ((**t) == a) {} // expected-warning {{expected a pointer type which has implemented '_Trait F', found 'int *'}}
  if ((**t) == s) {} // expected-error {{expected a pointer type which has implemented '_Trait F', found 'struct S'}}

  (*t)->foo(); // expected-error {{'_Trait F **' cannot directly call functions}}
}